[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.5"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
deltalake = { version = "0.6.0", features = ["s3"] }

[build-dependencies]
tonic-build = "0.8.4"

[env]
RUST_BACKTRACE = 1
